--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Més Arquitectura - Santiago Montes</title>
+    <title>Mes Arquitectura - Santi Montes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <h1>Més Arquitectura</h1>
-            <p>Dirección de Santiago Montes, Arquitecto</p>
+            <p>Dirección de Santi Montes, Arquitecto</p>
             <p style="font-size: 1.1rem; margin-bottom: 2rem;">Reformas • Obra Nueva • Certificaciones •
                 Rehabilitaciones</p>
             <button class="cta-button" onclick="showPage('contact')">Solicitar Consulta</button>
@@ -38,7 +39,7 @@
             <h2 class="section-title">Sobre Nosotros</h2>
             <div style="max-width: 900px; margin: 0 auto; text-align: justify; line-height: 1.8; color: #1a1a1a;">
                 <p style="margin-bottom: 1rem;">
-                    <strong>Santiago Montes</strong>, arquitecto profesional con más de 25 años de experiencia, dirige
+                    <strong>Santi Montes</strong>, arquitecto profesional con más de 25 años de experiencia, dirige
                     Més Arquitectura desde su fundación en 2000. Nuestra empresa se especializa en proyectos
                     residenciales, reformas integrales y gestión técnica de obras.
                 </p>
